# agiworkforce-desktop-app

./: .eslintrc.cjs  .gitignore  .mcp.json  .npmrc  100_PERCENT_COMPLETE.md  2026_COMPETITIVE_ANALYSIS_AND_RECOMMENDATIONS.md  ACHIEVEMENT_SUMMARY.md  AGENTIC_RESEARCH_FINDINGS.md  AGENTS.md  AGENT_8_SUMMARY.md  AGENT_8_VERIFICATION.md  AGENT_TEMPLATES_IMPLEMENTATION_REPORT.md  AGI_Workforce_Complete_Development_Plan.md  AGI_Workforce_Implementation_Audit.md  AGI_Workforce_Updated_Audit_Report.md  AI_APIS_UI_UX_RESEARCH_2026.md  AI_EMPLOYEE_LIBRARY_IMPLEMENTATION.md  AI_FIRST_IMPLEMENTATION.md  ANALYZE_LINKER_ERRORS_PROMPT.md  API_REFERENCE.md  AUDIT_REPORT.md  AUTH_IMPLEMENTATION_REPORT.md  AUTH_QUICKSTART.md  AUTOMATION_ENHANCEMENTS_REPORT.md  AUTOMATION_IMPLEMENTATION_SUMMARY.md  AUTOMATION_PLATFORMS_RESEARCH_2024-2026.md  BACKGROUND_TASKS_IMPLEMENTATION.md  BEFORE_AFTER_EXAMPLE.md  BROWSER_AUTOMATION_IMPLEMENTATION.md  BROWSER_AUTOMATION_USAGE.md  BROWSER_TOOLS_IMPLEMENTATION.md  BROWSER_VISUALIZATION_IMPLEMENTATION.md  BROWSER_VISUALIZATION_SUMMARY.md  BUILD_LINUX.md  CACHE_IMPLEMENTATION_REPORT.md  CACHE_INTEGRATION_REPORT.md  CHANGELOG.md  CLAUDE.md  CODEBASE_CACHE_IMPLEMENTATION_REPORT.md  CODE_REVIEW_AND_TEST_REPORT.md  (+176 more)
.claude/: settings.local.json
apps/desktop/src-tauri/: AUTH_INTEGRATION.md  AUTH_INTEGRATION_CHANGES.md  Cargo.toml  TESTING_MATRIX.md  check_output.txt  clippy-output.txt  create-icon.ps1  fix-clippy.ps1  mcp-registry.json  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/benches/: agi_benchmarks.rs  automation_benchmarks.rs
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/mcp/: default_servers.json
apps/desktop/src-tauri/migrations/: 002_advanced_features.sql
apps/desktop/src-tauri/sidecars/playwright-runner/: package.json
apps/desktop/src-tauri/src/: fix_chatmessage.sh  lib.rs  main.rs  state.rs  tray.rs  utils.rs
apps/desktop/src-tauri/src/agent/: ai_orchestrator.rs  approval.rs  autonomous.rs  change_tracker.rs  code_generator.rs  context_compactor.rs  context_manager.rs  executor.rs  intelligent_file_access.rs  mod.rs  planner.rs  prompt_engineer.rs  rag_system.rs  runtime.rs  vision.rs
apps/desktop/src-tauri/src/agi/: api_tools_impl.rs  audio_processing.rs  comparator.rs  context_manager.rs  core.rs  executor.rs  knowledge.rs  learning.rs  memory.rs  mod.rs  orchestrator.rs  orchestrator_examples.rs  outcome_tracker.rs  planner.rs  process_ontology.rs  process_reasoning.rs  resources.rs  sandbox.rs  tools.rs
apps/desktop/src-tauri/src/ai_employees/: demo_workflows.rs  employees.rs  executor.rs  marketplace.rs  mod.rs  registry.rs
apps/desktop/src-tauri/src/analytics/: metrics_aggregator.rs  mod.rs  report_generator.rs  roi_calculator.rs  scheduled_reports.rs
apps/desktop/src-tauri/src/api/: client.rs  mod.rs  oauth.rs  request_template.rs  response_parser.rs
apps/desktop/src-tauri/src/api_integrations/: image_gen.rs  mod.rs  perplexity.rs  veo3.rs
apps/desktop/src-tauri/src/automation/: codegen.rs  executor.rs  inspector.rs  mod.rs  recorder.rs  safety.rs  types.rs  vision_planner.rs
apps/desktop/src-tauri/src/billing/: mod.rs  models.rs  stripe_client.rs  webhooks.rs
apps/desktop/src-tauri/src/browser/: advanced.rs  cdp_client.rs  dom_operations.rs  extension_bridge.rs  mod.rs  playwright_bridge.rs  semantic.rs  semantic_examples.md  tab_manager.rs
apps/desktop/src-tauri/src/cache/: codebase.rs  llm_responses.rs  mod.rs  tool_results.rs  watcher_integration.rs
apps/desktop/src-tauri/src/calendar/: event_types.rs  google_calendar.rs  mod.rs  outlook_calendar.rs  timezone.rs
apps/desktop/src-tauri/src/clipboard/: monitor.rs
apps/desktop/src-tauri/src/cloud/: dropbox.rs  google_drive.rs  mod.rs  one_drive.rs
apps/desktop/src-tauri/src/codebase/: indexer.rs  mod.rs
apps/desktop/src-tauri/src/commands/: agent.rs  agent_runtime.rs  agi.rs  ai_employees.rs  ai_native.rs  analytics.rs  api.rs  automation.rs  automation_enhanced.rs  background_tasks.rs  browser.rs  cache.rs  calendar.rs  capture.rs  chat.rs  checkpoints.rs  cloud.rs  code_editing.rs  completion.rs  computer_use.rs  database.rs  debugging.rs  design.rs  diff.rs  document.rs  drafts.rs  email.rs  embeddings.rs  error_reporting.rs  file_ops.rs  file_watcher.rs  git.rs  github.rs  github_test.rs  governance.rs  hooks.rs  llm.rs  lsp.rs  marketplace.rs  mcp.rs  (+27 more)
apps/desktop/src-tauri/src/communications/: contacts.rs  email_parser.rs  imap_client.rs  mod.rs  smtp_client.rs
apps/desktop/src-tauri/src/computer_use/: mod.rs  screen_controller.rs  types.rs
apps/desktop/src-tauri/src/database/: connection.rs  mod.rs  mysql_client.rs  nosql_client.rs  pool.rs  postgres_client.rs  query_builder.rs  redis_client.rs  security.rs  sql_client.rs
apps/desktop/src-tauri/src/db/: migrations.rs  mod.rs  models.rs  repository.rs
apps/desktop/src-tauri/src/document/: create_excel.rs  create_pdf.rs  create_word.rs  edit_excel.rs  edit_pdf.rs  edit_word.rs  excel.rs  mod.rs  pdf.rs  word.rs
apps/desktop/src-tauri/src/embeddings/: cache.rs  chunker.rs  generator.rs  indexer.rs  mod.rs  similarity.rs
apps/desktop/src-tauri/src/error/: README.md  categorization.rs  commands.rs  integration.rs  mod.rs  recovery.rs  retry.rs
apps/desktop/src-tauri/src/errors/: mod.rs  recovery.rs
apps/desktop/src-tauri/tests/: automation_db_tests.rs  automation_integration.rs  integration_tests.rs  mcp_integration_test.rs  test_config.toml
(+1118 files in other folders)
